--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				</button>
 				<nav class="top_mnu">
 					<ul>
-						<li><a href="#about">Обо мне</a></li>
-						<li><a href="#resume">Резюме</a></li>
-						<li><a href="#portfolio">Портфолио</a></li>
-						<li><a href="#contacts">Контакты</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#resume">Resume</a></li>
+						<li><a href="#portfolio">Porfolio</a></li>
+						<li><a href="#contacts">Contacts</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -59,7 +59,7 @@
 		<div class="top_descr">
 			<div class="top_centered">
 				<div class="top_text">
-					<h1>Александр Прокопский</h1>
+					<h1>CREATIVITY WITH NCODE.ART</h1>
 					<p>Web-дизайнер / Front-End разработчик</p>
 				</div>
 			</div>
@@ -68,34 +68,34 @@
 </header>
 <section id="about" class="s_about bg_light">
 	<div class="section_header">
-		<h2>Обо мне</h2>
+		<h2>About me</h2>
 		<div class="s_descr_wrap">
-			<div class="s_descr">Познакомимся ближе</div>
+			<div class="s_descr">Lorem ipsum dolor sit amet</div>
 		</div>
 	</div>
 	<div class="section_content">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-md-push-4 animation_1">
-					<h3>Фото</h3>
+					<h3>Pic</h3>
 					<div class="person">
 						<a href="img/photo.jpg" class="popup"><img src="img/photo.jpg" alt="Alt" /></a>
 					</div>
 				</div>
 				<div class="col-md-4 col-md-pull-4 animation_2">
-					<h3>Немного о себе</h3>
+					<h3>Lorem Ipsum</h3>
 					<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
 					<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</p>
 				</div>
 				<div class="col-md-4 animation_3 personal_last_block">
-					<h3>Персональная информация</h3>
-					<h2 class="personal_header">Александр Прокопский</h2>
+					<h3>About</h3>
+					<h2 class="personal_header">Lorem Ipsum</h2>
 					<ul>
-						<li>Профессиональное создание сайтов: разработка дизайна, HTML верстка, посадка на CMS WordPress</li>
-						<li>День рождения: 3 июня 1988 года</li>
-						<li>Номер телефона: +7 999 999 99 99</li>
+						<li>Lorem Ipsum - это текст-"рыба"</li>
+						<li>Lorem Ipsum - это текст-"рыба"</li>
+						<li>Tel: +3 999 999 99 99</li>
 						<li>E-mail: <a href="mailto:youmail@mail.ru">youmail@mail.ru</a></li>
-						<li>Веб-сайт: <a href="//webdesign-master.ru" target="_blank">webdesign-master.ru</a></li>
+						<li>website: <a href="#" target="_blank">website.com</a></li>
 					</ul>
 					<div class="social_wrap">
 						<ul>
@@ -113,9 +113,9 @@
 
 <section id="resume" class="s_resume">
 	<div class="section_header">
-		<h2>Резюме</h2>
+		<h2>Resume</h2>
 		<div class="s_descr_wrap">
-			<div class="s_descr">Мои знания и достижения</div>
+			<div class="s_descr">Lorem Ipsum</div>
 		</div>
 	</div>
 	<div class="section_content">
@@ -123,40 +123,40 @@
 			<div class="row">
 				<div class="resume_container">
 					<div class="col-md-6 col-sm-6 left">
-						<h3>Работа</h3>
+						<h3>Works</h3>
 						<div class="resume_icon"><i class="icon-basic-case"></i></div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description">ООО "Пронькина забава"<strong>Программист</strong></div>
+							<div class="resume_description">ООО "website"<strong>Программист</strong></div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description">ООО "Пронькина забава"<strong>Программист</strong></div>
+							<div class="resume_description">ООО "website"<strong>Программист</strong></div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description">ООО "Пронькина забава"<strong>Программист</strong></div>
+							<div class="resume_description">ООО "website"<strong>Программист</strong></div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 right">
-						<h3>Учеба</h3>
+						<h3>website</h3>
 						<div class="resume_icon"><i class="icon-basic-book-pen"></i></div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description"><strong>Программист</strong>ООО "Пронькина забава"</div>
+							<div class="resume_description"><strong>Программист</strong>ООО "website"</div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description"><strong>Программист</strong>ООО "Пронькина забава"</div>
+							<div class="resume_description"><strong>Программист</strong>ООО "website"</div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 						<div class="resume_item">
 							<div class="year">2008-2015</div>
-							<div class="resume_description"><strong>Программист</strong>ООО "Пронькина забава"</div>
+							<div class="resume_description"><strong>Программист</strong>ООО "website"</div>
 							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum.</p>
 						</div>
 					</div>
@@ -168,9 +168,9 @@
 
 <section id="portfolio" class="s_portfolio bg_dark">
 	<div class="section_header">
-		<h2>Портфолио</h2>
+		<h2>Portfolio</h2>
 		<div class="s_descr_wrap">
-			<div class="s_descr">Мои последние работы</div>
+			<div class="s_descr">Resents works</div>
 		</div>
 	</div>
 	<div class="section_content">
@@ -178,25 +178,25 @@
 			<div class="row">
 				<div class="filter_div controls">
 					<ul>
-						<li class="filter active" data-filter="all">Все работы</li>
-						<li class="filter" data-filter=".category-1">Сайты</li>
-						<li class="filter" data-filter=".category-2">Айдентика</li>
-						<li class="filter" data-filter=".category-3">Логотипы</li>
+						<li class="filter active" data-filter="all">All</li>
+						<li class="filter" data-filter=".category-1">websites</li>
+						<li class="filter" data-filter=".category-2">Design</li>
+						<li class="filter" data-filter=".category-3">Logos</li>
 					</ul>
 				</div>
 				<div id="portfolio_grid">
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 						<img src="img/portfolio-images/1.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
 								</div>
@@ -206,15 +206,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 						<img src="img/portfolio-images/4.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/4.jpg" alt="Alt" />
 								</div>
@@ -224,9 +224,9 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
 						<img src="img/portfolio-images/2.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
@@ -242,15 +242,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 						<img src="img/portfolio-images/3.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/3.jpg" alt="Alt" />
 								</div>
@@ -260,15 +260,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 						<img src="img/portfolio-images/4.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/4.jpg" alt="Alt" />
 								</div>
@@ -278,15 +278,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
 						<img src="img/portfolio-images/5.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/5.jpg" alt="Alt" />
 								</div>
@@ -296,15 +296,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
 						<img src="img/portfolio-images/6.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/6.jpg" alt="Alt" />
 								</div>
@@ -314,15 +314,15 @@
 					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 						<img src="img/portfolio-images/1.jpg" alt="Alt" />
 						<div class="port_item_cont">
-							<h3>Заголовок работы</h3>
-							<p>Описание работы</p>
-							<a href="#" class="popup_content">Посмотреть</a>
+							<h3>Header</h3>
+							<p>Description</p>
+							<a href="#" class="popup_content">More</a>
 						</div>
 						<div class="hidden">
 							<div class="podrt_descr">
 								<div class="modal-box-content">
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
-									<h3>Заголовок работы</h3>
+									<h3>Header</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum cupiditate, dignissimos quo. Dolore, omnis totam quibusdam voluptatibus cum, nulla dolores sunt iste? Sunt nam illum, animi magni veniam adipisci non.</p>
 									<img src="img/portfolio-images/1.jpg" alt="Alt" />
 								</div>
@@ -337,9 +337,9 @@
 
 <section id="contacts" class="s_contacts bg_light">
 	<div class="section_header">
-		<h2>Контакты</h2>
+		<h2>Contacts</h2>
 		<div class="s_descr_wrap">
-			<div class="s_descr">Оставьте ваше сообщение</div>
+			<div class="s_descr">Leave a message</div>
 		</div>
 	</div>
 	<div class="section_content">
@@ -348,38 +348,38 @@
 				<div class="col-md-6 col-sm-6">
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-geolocalize-05"></div>
-						<h3>Адрес:</h3>
+						<h3>Adress:</h3>
 						<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
 					</div>
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-smartphone"></div>
-						<h3>Телефон:</h3>
-						<p>+7 999 999 99 99</p>
+						<h3>tel:</h3>
+						<p>+3 999 999 99 99</p>
 					</div>
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-webpage-img-txt"></div>
-						<h3>Веб-сайт:</h3>
-						<p><a href="//webdesign-master.ru" target="_blank">webdesign-master.ru</a></p>
+						<h3>website:</h3>
+						<p><a href="#" target="_blank">webdesign.ru</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6">
 					<form action="http://formspree.io/agragregra@ya.ru" class="main_form" novalidate target="_blank" method="post">
 						<label class="form-group">
-							<span class="color_element">*</span> Ваше имя:
-							<input type="text" name="name" placeholder="Ваше имя" data-validation-required-message="Вы не ввели имя" required />
+							<span class="color_element">*</span> Name:
+							<input type="text" name="name" placeholder="Name" data-validation-required-message="Вы не ввели имя" required />
 							<span class="help-block text-danger"></span>
 						</label>
 						<label class="form-group">
-							<span class="color_element">*</span> Ваш E-mail:
-							<input type="email" name="email" placeholder="Ваш E-mail" data-validation-required-message="Не корректно введен E-mail" required />
+							<span class="color_element">*</span> E-mail:
+							<input type="email" name="email" placeholder="E-mail" data-validation-required-message="Не корректно введен E-mail" required />
 							<span class="help-block text-danger"></span>
 						</label>
 						<label class="form-group">
-							<span class="color_element">*</span> Ваше сообщение:
-							<textarea name="message" placeholder="Ваше сообщение" data-validation-required-message="Вы не ввели сообщение" required></textarea>
+							<span class="color_element">*</span> Message:
+							<textarea name="message" placeholder="Message" data-validation-required-message="Вы не ввели сообщение" required></textarea>
 							<span class="help-block text-danger"></span>
 						</label>
-						<button>Отправить</button>
+						<button>Send</button>
 					</form>
 				</div>
 			</div>
@@ -391,7 +391,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				&copy; 2015 Александр Прокопский
+				&copy; 2015 website
 				<div class="social_wrap">
 					<ul>
 						<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
